login page & other code added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             <div class="header-info">
                 <div class="header-caption">
-                    <h1>HFC-2022</h1>
+
+                    <h1>The Greatest show on the earth <span class="header-titel">HFC-2022</span></h1>
                     <h3>Authentic Football Auctions - Buy Football Memorabilia</h3>
                     <button class="button" target="blunk">
                         <a href="https://www.youtube.com/">Watch Live <i class="fas fa-arrow-right"></i></a>
@@ -39,7 +40,7 @@
                 <div class="aside-menu">
                     <ul>
                         <li> <a href="upcoming-match.html">Upcoming Match</a></li>
-                        <li> <a href="header">All Group</a></li>
+                        <li> <a href="login.html">All Group</a></li>
                         <li> <a href="index.html">Blog</a></li>
                     </ul>
                 </div>
