--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -20,7 +20,7 @@
 
             <div class="header-info">
                 <div class="header-caption">
-                    <h1>HFC-2022</h1>
+                    <h1>The Greatest show on the earth <span class="header-titel">HFC-2022</span></h1>
                     <h3>Authentic Football Auctions - Buy Football Memorabilia</h3>
                     <button class="button" target="blunk">
                         <a href="https://www.youtube.com/">Watch Live <i class="fas fa-arrow-right"></i></a>
@@ -39,7 +39,7 @@
                 <div class="aside-menu">
                     <ul>
                         <li> <a href="upcoming-match.html">Upcoming Match</a></li>
-                        <li> <a href="#header">All Group</a></li>
+                        <li> <a href="login.html">All Group</a></li>
                         <li> <a href="index.html">Blog</a></li>
                     </ul>
                 </div>
@@ -103,11 +103,11 @@
                 </div>
                 <div class="player">
                     <div class="player-image">
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/Flag.png" alt=""></div>
                         <div>
                             <h2>VS</h2>
                         </div>
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/germany Flag.png" alt=""></div>
                     </div>
                     <div class="player-info">
 
