--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -47,11 +47,11 @@
             <div class="players">
                 <div class="player">
                     <div class="player-image">
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/Flag.png" alt=""></div>
                         <div>
                             <h2>VS</h2>
                         </div>
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/germany Flag.png" alt=""></div>
                     </div>
                     <div class="player-info">
 
@@ -61,11 +61,11 @@
                 </div>
                 <div class="player">
                     <div class="player-image">
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/f1.jfif" alt=""></div>
                         <div>
                             <h2>VS</h2>
                         </div>
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/f2.jfif" alt=""></div>
                     </div>
                     <div class="player-info">
 
@@ -75,29 +75,29 @@
                 </div>
                 <div class="player">
                     <div class="player-image">
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/f3.jfif" alt=""></div>
                         <div>
                             <h2>VS</h2>
                         </div>
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/f4.jfif" alt=""></div>
                     </div>
                     <div class="player-info">
 
-                        <h2>Germany VS France </h2>
+                        <h2>Germany VS Bangladesh </h2>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
                 <div class="player">
                     <div class="player-image">
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/Flag.png" alt=""></div>
                         <div>
                             <h2>VS</h2>
                         </div>
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/f4.jfif" alt=""></div>
                     </div>
                     <div class="player-info">
 
-                        <h2>Germany VS France </h2>
+                        <h2>Bangladesh vs France </h2>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
@@ -117,11 +117,11 @@
                 </div>
                 <div class="player">
                     <div class="player-image">
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/f3.jfif" alt=""></div>
                         <div>
                             <h2>VS</h2>
                         </div>
-                        <div class="teem-vs"> <img src="images/th (1).jpg" alt=""></div>
+                        <div class="teem-vs"> <img src="images/germany Flag.png" alt=""></div>
                     </div>
                     <div class="player-info">
 
