--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         </div>
     </header>
     <main>
-
+        <!-------main  content---------->
         <section class="container menu-player">
+            <!-----aside menu bar ------>
             <div>
                 <div class="aside-menu">
                     <ul>
@@ -45,6 +46,7 @@
                     </ul>
                 </div>
             </div>
+            <!---------------cart---------->
             <div class="players">
                 <div class="player">
                     <div class="player-image">
@@ -147,6 +149,7 @@
 
             </div>
         </section>
+        <!------------------footer----------------->
         <footer class="container">
 
             <div class="footer">
