--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-
+        <!-----------login bar with menu------------>
         <section class="container menu-player">
             <div>
                 <div class="aside-menu">
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="players">
-
+                <!-----------login form------------->
                 <form class="form" action="">
                     <p><input type="email" placeholder="your email"></p>
                     <p><input type="password" name="" id="" placeholder="password"></p>
@@ -55,7 +55,7 @@
 
             </div>
         </section>
-
+        <!--------------footer-------------->
         <footer class="container">
 
             <div class="footer">
