--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -33,9 +33,10 @@
         </div>
     </header>
     <main>
-
+        <!------------main content--------------->
         <section class="container menu-player">
             <div>
+                <!--------------manu bar----------->
                 <div class="aside-menu">
                     <ul>
                         <li> <a href="upcoming-match.html">Upcoming Match</a></li>
@@ -44,6 +45,7 @@
                     </ul>
                 </div>
             </div>
+            <!--------------card ----------->
             <div class="players">
                 <div class="player">
                     <div class="player-image">
@@ -133,6 +135,7 @@
 
             </div>
         </section>
+        <!------------footer Section---------->
         <footer class="container">
 
             <div class="footer">
@@ -151,7 +154,7 @@
                         <li> Goal Live </li>
                     </ul>
                 </div>
-
+                <!---------------icon ------------>
                 <div class="footer-icon">
                     <a target="_blunk" href="https://www.instagram.com/bphusain97/"><i
                             class="fab fa-instagram-square"></i></a>
